--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Petrol Price Today</title>
+    <title>Shijun Liu</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
@@ -23,29 +23,68 @@
 </head>
 
 <body>
-<!--[if lt IE 7]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
+    <!--[if lt IE 7]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
         href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
-<div id="container">
-    <div id="app"></div>
-</div>
-<script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="/js/app.js"></script>
-<!--<script>-->
-<!--(function(b, o, i, l, e, r) {-->
-<!--b.GoogleAnalyticsObject = l;-->
-<!--b[l] || (b[l] = function() {-->
-<!--(b[l].q = b[l].q || []).push(arguments)-->
-<!--});-->
-<!--b[l].l = +new Date;-->
-<!--e = o.createElement(i);-->
-<!--r = o.getElementsByTagName(i)[0];-->
-<!--e.src = '//www.google-analytics.com/analytics.js';-->
-<!--r.parentNode.insertBefore(e, r)-->
-<!--}(window, document, 'script', 'ga'));-->
-<!--ga('create', 'UA-XXXXX-X');-->
-<!--ga('send', 'pageview');-->
-<!---->
-<!--</script>-->
+    <a href="https://github.com/lsj5031"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Find me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
+    </a>
+    <div id="container">
+        <div id="main">
+            <section id="avatar">
+                <div class="wrapper">
+
+                </div>
+            </section>
+            <section id="brief">
+                <h1>Shijun Liu (Leo)</h1>
+                <p>A Web Developer living in Auckland, New Zealand who loves python, clojure, coffeescript, rust and so on. He can also help people with developing websites and scientifc applications.</p>
+            </section>
+            <section id="links">
+                <ul>
+                    <li><a href=""><i class="icon-quill"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-lab"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-mail4"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-google-plus3"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-facebook3"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-twitter3"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-weibo"></i>
+                    </a>
+                    </li>
+                    <li><a href=""><i class="icon-bitbucket"></i>
+                    </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </div>
+    <script src="/js/app.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-34519291-3', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
