--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
             </section>
             <section id="links">
                 <ul>
-                    <li><a href=""><i class="icon-quill"></i>
+                    <li><a href="http://blog.liushijun.info/"><i class="icon-quill"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-lab"></i>
+                    <li><a href="http://lab.liushijun.info/"><i class="icon-lab"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-mail4"></i>
+                    <li><a href="mailto://lsj5031@gmail.com"><i class="icon-mail4"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-google-plus3"></i>
+                    <li><a href="https://plus.google.com/100737026606340998359"><i class="icon-google-plus3"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-facebook3"></i>
+                    <li><a href="https://www.facebook.com/profile.php?id=100001814084792"><i class="icon-facebook3"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-twitter3"></i>
+                    <li><a href="https://twitter.com/lsj5031"><i class="icon-twitter3"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-weibo"></i>
+                    <li><a href="http://www.weibo.com/p/1005051942857765"><i class="icon-weibo"></i>
                     </a>
                     </li>
-                    <li><a href=""><i class="icon-bitbucket"></i>
+                    <li><a href="https://bitbucket.org/lsj5031"><i class="icon-bitbucket"></i>
                     </a>
                     </li>
                 </ul>
