changed email address

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><a href="http://lab.liushijun.info/"><i class="icon-lab"></i>
                     </a>
                     </li>
-                    <li><a href="mailto://lsj5031@gmail.com"><i class="icon-mail4"></i>
+                    <li><a href="mailto://me@liushijun.info"><i class="icon-mail4"></i>
                     </a>
                     </li>
                     <li><a href="https://plus.google.com/100737026606340998359"><i class="icon-google-plus3"></i>
