--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
             <section id="brief">
                 <h1>Shijun Liu (Leo)</h1>
-                <p>A Web Developer living in Auckland, who loves python, clojure, coffeescript, rust and so on. He can also help people with developing websites and scientifc applications.</p>
+                <p>A web developer who loves python, clojure/script, currently living in Auckland, NZ.</p>
             </section>
             <section id="links">
                 <ul>
